--- a/SoccerRobots_Desktop_Application/SoccerRobots_Desktop_Application.csproj
+++ b/SoccerRobots_Desktop_Application/SoccerRobots_Desktop_Application.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddModifyMatch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddModifyMatch.Designer.cs">
+      <DependentUpon>AddModifyMatch.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddRobotForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +64,19 @@
     </Compile>
     <Compile Include="AddTeamForm.Designer.cs">
       <DependentUpon>AddTeamForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Match.cs" />
+    <Compile Include="MatchDashBord.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MatchDashBord.Designer.cs">
+      <DependentUpon>MatchDashBord.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MatchStatistics.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MatchStatistics.Designer.cs">
+      <DependentUpon>MatchStatistics.cs</DependentUpon>
     </Compile>
     <Compile Include="Robot.cs" />
     <Compile Include="RobotDashbord.cs">
@@ -80,6 +100,9 @@
     <Compile Include="TeamDashbord.Designer.cs">
       <DependentUpon>TeamDashbord.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddModifyMatch.resx">
+      <DependentUpon>AddModifyMatch.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddRobotForm.resx">
       <DependentUpon>AddRobotForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +111,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatchDashBord.resx">
+      <DependentUpon>MatchDashBord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatchStatistics.resx">
+      <DependentUpon>MatchStatistics.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
